added some sematic elements. stoped at hero section sematic element review not fully done

--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 </head>
 
 <body>
+    <!--Adding sematic element "header" Juan Sanchez-->
+    <header>
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
+        <!--Adding sematic element "nav" Juan Sanchez-->
+        <nav>
         <div>
             <ul>
                 <li>
@@ -23,8 +27,12 @@
                 </li>
             </ul>
         </div>
+        </nav>
     </div>
-    <div class="hero"></div>
+    </header>
+    <!--Adding sematic element "section" Juan Sanchez-->
+    <section>
+    <div class="hero">
     <div class="content">
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
@@ -48,6 +56,8 @@
             </p>
         </div>
     </div>
+    </div>
+</section>
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
